feat(tests): fix some IDE warnings